:tada: add bilibili

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <style>
         code {
-            background-color: transparent!important;
-            font-family: Consolas,monospace;
+            background-color: transparent !important;
+            font-family: Consolas, monospace;
             font-size: larger;
         }
+
         img {
             margin-top: 8px;
         }
-        .zhihu .message-header{
+
+        .zhihu .message-header {
             background-color: rgb(0, 102, 255);
         }
-        .zhihu .message-body{
-            background-color: rgb(229, 239, 255);
+
+        .bilibili .message-header {
+            background-color: rgb(251, 114, 153);
         }
     </style>
 </head>
@@ -35,11 +38,22 @@
             <img alt="" src="https://stats.justsong.cn/api/zhihu?username=excited-vczh">
         </div>
     </article>
+    <article class="message bilibili">
+        <div class="message-header">
+            <p>知乎</p>
+        </div>
+        <div class="message-body">
+            <span>示例链接：<code>https://stats.justsong.cn/api/bilibili/?id=666</code></span>
+            <img alt="" src="https://stats.justsong.cn/api/bilibili/?id=666">
+        </div>
+    </article>
 </div>
+
 <footer class="footer" style="background-color: white">
-    <div class="content has-text-centered" >
+    <div class="content has-text-centered">
         <p>
-            <strong><a href="https://github.com/songquanpeng/readme-stats">Readme Stats</a></strong> by <a href="https://github.com/songquanpeng">JustSong</a>. The source code is licensed
+            <strong><a href="https://github.com/songquanpeng/readme-stats">Readme Stats</a></strong> by <a
+                href="https://github.com/songquanpeng">JustSong</a>. The source code is licensed
             <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
         </p>
     </div>
