:book: update docs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         .bilibili .message-header {
             background-color: rgb(251, 114, 153);
         }
+
+        .leetcode .message-header {
+            background-color: rgb(76, 175, 80);
+        }
     </style>
 </head>
 <body style="width: 100%;">
@@ -45,6 +49,15 @@
         <div class="message-body">
             <span>示例链接：<code>https://stats.justsong.cn/api/bilibili/?id=666</code></span>
             <img alt="" src="https://stats.justsong.cn/api/bilibili/?id=666">
+        </div>
+    </article>
+    <article class="message leetcode">
+        <div class="message-header">
+            <p>LeetCode</p>
+        </div>
+        <div class="message-body">
+            <span>示例链接：<code>https://stats.justsong.cn/api/leetcode/?username=quanpeng</code></span>
+            <img alt="" src="https://stats.justsong.cn/api/leetcode/?username=quanpeng">
         </div>
     </article>
 </div>
