feat(juejin): add junjin.cn stats

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         .leetcode .message-header {
             background-color: rgb(76, 175, 80);
         }
+        .juejin .message-header {
+            background-color: rgb(55, 125, 247);
+        }
     </style>
 </head>
 <body style="width: 100%;">
@@ -58,6 +61,15 @@
         <div class="message-body">
             <span>示例链接：<code>https://stats.justsong.cn/api/leetcode/?username=quanpeng</code></span>
             <img alt="" src="https://stats.justsong.cn/api/leetcode/?username=quanpeng">
+        </div>
+    </article>
+    <article class="message juejin">
+        <div class="message-header">
+            <p>juejin.cn（掘金）</p>
+        </div>
+        <div class="message-body">
+            <span>示例链接：<code>https://stats.justsong.cn/api/juejin?id=1556564194374926"</code></span>
+            <img alt="" src="https://stats.justsong.cn/api/juejin?id=1556564194374926">
         </div>
     </article>
 </div>
