:tada: support NowCoder now

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         .csdn .message-header {
             background-color: rgb(255, 77, 77);
         }
+
+        .nowcoder .message-header {
+            background-color: rgb(61, 68, 76);
+        }
     </style>
 </head>
 <body style="width: 100%">
@@ -93,6 +97,15 @@
         <div class="message-body">
             <span>示例链接：<code>https://stats.justsong.cn/api/csdn?id=vczh</code></span>
             <img alt="" src="https://stats.justsong.cn/api/csdn?id=vczh">
+        </div>
+    </article>
+    <article class="message nowcoder">
+        <div class="message-header">
+            <p>牛客</p>
+        </div>
+        <div class="message-body">
+            <span>示例链接：<code>https://stats.justsong.cn/api/nowcoder?id=2004383</code></span>
+            <img alt="" src="https://stats.justsong.cn/api/nowcoder?id=2004383">
         </div>
     </article>
 </div>
