--- a/index.html
+++ b/index.html
@@ -1,122 +1,135 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>网站数据卡片</title>
-    <meta name="description" content="在 README 中展示你在知乎，B 站等网站的数据">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <style>
-        code {
-            background-color: transparent !important;
-            font-family: Consolas, monospace;
-            font-size: larger;
-            word-wrap:break-word;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>网站数据卡片</title>
+  <meta name="description" content="在 README 中展示你在知乎，B 站等网站的数据">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  <style>
+      code {
+          background-color: transparent !important;
+          font-family: Consolas, monospace;
+          font-size: larger;
+          word-wrap: break-word;
+      }
 
-        img {
-            margin-top: 8px;
-        }
+      img {
+          margin-top: 8px;
+      }
 
-        .zhihu .message-header {
-            background-color: rgb(0, 102, 255);
-        }
+      .dark .message-header {
+          background-color: rgb(28, 28, 38);
+      }
 
-        .bilibili .message-header {
-            background-color: rgb(251, 114, 153);
-        }
+      .zhihu .message-header {
+          background-color: rgb(0, 102, 255);
+      }
 
-        .leetcode .message-header {
-            background-color: rgb(76, 175, 80);
-        }
+      .bilibili .message-header {
+          background-color: rgb(251, 114, 153);
+      }
 
-        .juejin .message-header {
-            background-color: rgb(55, 125, 247);
-        }
+      .leetcode .message-header {
+          background-color: rgb(76, 175, 80);
+      }
 
-        .csdn .message-header {
-            background-color: rgb(255, 77, 77);
-        }
+      .juejin .message-header {
+          background-color: rgb(55, 125, 247);
+      }
 
-        .nowcoder .message-header {
-            background-color: rgb(61, 68, 76);
-        }
-    </style>
+      .csdn .message-header {
+          background-color: rgb(255, 77, 77);
+      }
+
+      .nowcoder .message-header {
+          background-color: rgb(61, 68, 76);
+      }
+  </style>
 </head>
 <body style="width: 100%">
 <div style="margin: auto; max-width: 960px;padding-left: 8px; padding-right: 8px">
-    <h1 class="title" style="margin-top: 16px"><a style="color: black; text-decoration: none">网站数据卡片</a></h1>
-    <article class="message">
-        <div class="message-body">
-            在 README 中展示你在知乎，B 站，LeetCode，掘金等网站的数据，服务部署在 Vercel 上，保证服务稳定。
-            <br/>
-            Github 仓库地址：<a href="https://github.com/songquanpeng/stats-cards">https://github.com/songquanpeng/stats-cards</a>
-        </div>
-    </article>
-    <article class="message zhihu">
-        <div class="message-header">
-            <p>知乎</p>
-        </div>
-        <div class="message-body">
-            <span>示例链接：<code>https://stats.justsong.cn/api/zhihu?username=excited-vczh</code></span>
-            <img alt="" src="https://stats.justsong.cn/api/zhihu?username=excited-vczh">
-        </div>
-    </article>
-    <article class="message bilibili">
-        <div class="message-header">
-            <p>B 站</p>
-        </div>
-        <div class="message-body">
-            <span>示例链接：<code>https://stats.justsong.cn/api/bilibili/?id=666</code></span>
-            <img alt="" src="https://stats.justsong.cn/api/bilibili/?id=666">
-        </div>
-    </article>
-    <article class="message leetcode">
-        <div class="message-header">
-            <p>LeetCode</p>
-        </div>
-        <div class="message-body">
-            <p>国际版示例链接：<code>https://stats.justsong.cn/api/leetcode/?username=quanpeng</code></p>
-            <p>中国版示例链接：<code>https://stats.justsong.cn/api/leetcode/?username=quanpeng&cn=true</code></p>
-            <img alt="" src="https://stats.justsong.cn/api/leetcode/?username=quanpeng">
-        </div>
-    </article>
-    <article class="message juejin">
-        <div class="message-header">
-            <p>掘金</p>
-        </div>
-        <div class="message-body">
-            <span>示例链接：<code>https://stats.justsong.cn/api/juejin?id=1556564194374926</code></span>
-            <img alt="" src="https://stats.justsong.cn/api/juejin?id=1556564194374926">
-        </div>
-    </article>
-    <article class="message csdn">
-        <div class="message-header">
-            <p>CSDN</p>
-        </div>
-        <div class="message-body">
-            <span>示例链接：<code>https://stats.justsong.cn/api/csdn?id=vczh</code></span>
-            <img alt="" src="https://stats.justsong.cn/api/csdn?id=vczh">
-        </div>
-    </article>
-    <article class="message nowcoder">
-        <div class="message-header">
-            <p>牛客</p>
-        </div>
-        <div class="message-body">
-            <span>示例链接：<code>https://stats.justsong.cn/api/nowcoder?id=2004383</code></span>
-            <img alt="" src="https://stats.justsong.cn/api/nowcoder?id=2004383">
-        </div>
-    </article>
+  <h1 class="title" style="margin-top: 16px"><a style="color: black; text-decoration: none">网站数据卡片</a></h1>
+  <article class="message">
+    <div class="message-body">
+      在 README 中展示你在知乎，B 站，LeetCode，掘金等网站的数据，服务部署在 Vercel 上，保证服务稳定。
+      <br />
+      Github 仓库地址：<a href="https://github.com/songquanpeng/stats-cards">https://github.com/songquanpeng/stats-cards</a>
+    </div>
+  </article>
+  <article class="message dark">
+    <div class="message-header">
+      <p>暗黑模式</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/zhihu?username=excited-vczh&theme=dark</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/zhihu?username=excited-vczh&theme=dark">
+    </div>
+  </article>
+  <article class="message zhihu">
+    <div class="message-header">
+      <p>知乎</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/zhihu?username=excited-vczh</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/zhihu?username=excited-vczh">
+    </div>
+  </article>
+  <article class="message bilibili">
+    <div class="message-header">
+      <p>B 站</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/bilibili/?id=666</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/bilibili/?id=666">
+    </div>
+  </article>
+  <article class="message leetcode">
+    <div class="message-header">
+      <p>LeetCode</p>
+    </div>
+    <div class="message-body">
+      <p>国际版示例链接：<code>https://stats.justsong.cn/api/leetcode/?username=quanpeng</code></p>
+      <p>中国版示例链接：<code>https://stats.justsong.cn/api/leetcode/?username=quanpeng&cn=true</code></p>
+      <img alt="" src="https://stats.justsong.cn/api/leetcode/?username=quanpeng">
+    </div>
+  </article>
+  <article class="message juejin">
+    <div class="message-header">
+      <p>掘金</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/juejin?id=1556564194374926</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/juejin?id=1556564194374926">
+    </div>
+  </article>
+  <article class="message csdn">
+    <div class="message-header">
+      <p>CSDN</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/csdn?id=vczh</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/csdn?id=vczh">
+    </div>
+  </article>
+  <article class="message nowcoder">
+    <div class="message-header">
+      <p>牛客</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/nowcoder?id=2004383</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/nowcoder?id=2004383">
+    </div>
+  </article>
 </div>
 
 <footer class="footer" style="background-color: white">
-    <div class="content has-text-centered">
-        <p>
-            <strong><a href="https://github.com/songquanpeng/stats-cards">stats cards</a></strong> by <a
-                href="https://github.com/songquanpeng">JustSong</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-        </p>
-    </div>
+  <div class="content has-text-centered">
+    <p>
+      <strong><a href="https://github.com/songquanpeng/stats-cards">stats cards</a></strong> by <a
+      href="https://github.com/songquanpeng">JustSong</a>. The source code is licensed
+      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+    </p>
+  </div>
 </footer>
 </body>
