:book: update docs

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           background-color: rgb(28, 28, 38);
       }
 
+      .github .message-header {
+          background-color: rgb(36, 41, 47);
+      }
+
       .zhihu .message-header {
           background-color: rgb(0, 102, 255);
       }
@@ -64,6 +68,15 @@
     <div class="message-body">
       <span>示例链接：<code>https://stats.justsong.cn/api/zhihu?username=excited-vczh&theme=dark</code></span>
       <img alt="" src="https://stats.justsong.cn/api/zhihu?username=excited-vczh&theme=dark">
+    </div>
+  </article>
+  <article class="message github">
+    <div class="message-header">
+      <p>GitHub</p>
+    </div>
+    <div class="message-body">
+      <span>示例链接：<code>https://stats.justsong.cn/api/github?username=songquanpeng</code></span>
+      <img alt="" src="https://stats.justsong.cn/api/github?username=songquanpeng">
     </div>
   </article>
   <article class="message zhihu">
