--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     content='在 README 中展示你在知乎，GitHub，B 站，LeetCode，掘金，CSDN，牛客等网站的数据，也可用于服务状态监控. Show your LeetCode & GitHub stats in GitHub Profile.'
     name='description'>
   <meta content='#ffffff' name='theme-color' />
-  <link href='/public/bulma.min.css' rel='stylesheet'>
-  <link href='/public/main.css' rel='stylesheet'>
-  <script src='/public/main.js'></script>
+  <link href='/static/bulma.min.css' rel='stylesheet'>
+  <link href='/static/main.css' rel='stylesheet'>
+  <script src='/static/main.js'></script>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
   <nav aria-label='main navigation' class='navbar nav-shadow' role='navigation'>
     <div class='container'>
       <div class='navbar-brand'>
-        <a class='navbar-item is-size-5' href='/' style='font-weight: bold'>
+        <a class='navbar-item is-size-5' href='/public' style='font-weight: bold'>
           网站数据卡片
         </a>
         <a aria-expanded='false' aria-label='menu' class='navbar-burger burger' data-target='mainNavbar'
@@ -30,7 +30,7 @@
       </div>
       <div class='navbar-menu' id='mainNavbar'>
         <div class='navbar-start'>
-          <a class='navbar-item' href='/'> 首页 </a>
+          <a class='navbar-item' href='/public'> 首页 </a>
           <a class='navbar-item' href='https://iamazing.cn/page/stats-cards'
              target='_blank'> 帮助 </a>
           <a class='navbar-item' href=''> 支持 </a>
