--- a/public/reward.html
+++ b/public/reward.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset='UTF-8' />
   <meta content='width=device-width, initial-scale=1' name='viewport' />
-  <title>网站数据卡片</title>
-  <meta
-    content='在 README 中展示你在知乎，GitHub，B 站，LeetCode，掘金，CSDN，牛客等网站的数据，也可用于服务状态监控. Show your LeetCode & GitHub stats in GitHub Profile.'
-    name='description'>
+  <title>支持本项目</title>
+  <meta content='支持 JustSong' name='description'>
   <meta content='#ffffff' name='theme-color' />
   <link href='/static/bulma.min.css' rel='stylesheet'>
   <link href='/static/main.css' rel='stylesheet'>
@@ -55,51 +53,21 @@
   </script>
   <div class='container'>
     <div class='normal-container'>
-      <div class='notification'>
-        点击<strong><a href='https://iamazing.cn/page/stats-cards'
-                     target='_blank'>帮助</a></strong>查看具体的用法，本页面仅供展示。
-        项目地址：<a href='https://github.com/songquanpeng/stats-cards'
-                target='_blank'>https://github.com/songquanpeng/stats-cards</a>
-        <br />
-      </div>
       <div class='card'>
         <header class='card-header'>
           <p class='card-header-title'>
-            网站数据展示
+            支持本项目
           </p>
         </header>
         <div class='card-content'>
           <div class='content'>
             <div class='columns'>
               <div class='column'>
-                <img alt='GitHub' src='/api/github?username=songquanpeng&theme=light'>
-              </div>
-              <div class='column'>
-                <img alt='知乎' src='/api/zhihu?username=excited-vczh'>
-              </div>
-            </div>
-            <div class='columns'>
-              <div class='column'>
-                <img alt='LeetCode' src='/api/leetcode/?username=quanpeng'>
-              </div>
-              <div class='column'>
-                <img alt='力扣' src='/api/leetcode/?username=quanpeng&cn=true'>
-              </div>
-            </div>
-            <div class='columns'>
-              <div class='column'>
-                <img alt='B 站' src='/api/bilibili/?id=666'>
-              </div>
-              <div class='column'>
-                <img alt='掘金' src='/api/juejin?id=1556564194374926'>
-              </div>
-            </div>
-            <div class='columns'>
-              <div class='column'>
-                <img alt='CSDN' src='/api/csdn?id=vczh'>
-              </div>
-              <div class='column'>
-                <img alt='牛客' src='/api/nowcoder?id=6484283'>
+                如果本工具对你有价值，或许可以考虑赞赏一杯咖啡，这会让维护者很开心：
+                <img alt='微信赞赏码' src='https://iamazing.cn/upload/b216b150-6711-11ed-8c05-35d35a34c6d4.png'
+                     style='max-width: 400px'>
+                <br />
+                后续将在此自动渲染赞赏者名单，敬请期待！
               </div>
             </div>
           </div>
