:tada: add Google Analytics

--- a/public/reward.html
+++ b/public/reward.html
@@ -10,8 +10,20 @@
   <link href='/static/main.css' rel='stylesheet'>
   <script src='/static/main.js'></script>
 </head>
-<body>
+<!-- Google tag (gtag.js) -->
+<script async src='https://www.googletagmanager.com/gtag/js?id=G-F04WN7D6NF'></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
 
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
+  gtag('js', new Date());
+
+  gtag('config', 'G-F04WN7D6NF');
+</script>
+<body>
 <div>
   <nav aria-label='main navigation' class='navbar nav-shadow' role='navigation'>
     <div class='container'>
