:bug: fix image overflow on mobile device

--- a/public/reward.html
+++ b/public/reward.html
@@ -76,8 +76,10 @@
             <div class='columns'>
               <div class='column'>
                 如果本工具对你有价值，或许可以考虑赞赏一杯咖啡，这会让维护者很开心：
-                <img alt='微信赞赏码' src='https://iamazing.cn/upload/b216b150-6711-11ed-8c05-35d35a34c6d4.png'
-                     style='max-width: 400px'>
+                <div style='max-width: 400px; margin: auto'>
+                  <img alt='微信赞赏码' src='https://iamazing.cn/upload/b216b150-6711-11ed-8c05-35d35a34c6d4.png'
+                       style='max-width: 100%;'>
+                </div>
                 <br />
                 后续将在此自动渲染赞赏者名单，敬请期待！
               </div>
@@ -87,15 +89,16 @@
       </div>
     </div>
   </div>
-  <footer class='footer' style='background-color: white'>
-    <div class='content has-text-centered'>
-      <p>
-        <a href='https://github.com/songquanpeng/stats-cards'>网站数据卡片</a> 由 <a href='https://github.com/songquanpeng'>JustSong</a>
-        构建，源代码遵循
-        <a href='https://opensource.org/licenses/mit-license.php'>MIT</a> 协议
-      </p>
-    </div>
-  </footer>
+</div>
+<footer class='footer' style='background-color: white'>
+  <div class='content has-text-centered'>
+    <p>
+      <a href='https://github.com/songquanpeng/stats-cards'>网站数据卡片</a> 由 <a href='https://github.com/songquanpeng'>JustSong</a>
+      构建，源代码遵循
+      <a href='https://opensource.org/licenses/mit-license.php'>MIT</a> 协议
+    </p>
+  </div>
+</footer>
 </div>
 </body>
 </html>
