Update README with Steam API configuration details

--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,11 @@
                 <img alt='牛客' src='/api/nowcoder?id=6484283'>
               </div>
             </div>
+            <div class='columns'>
+              <div class='column'>
+                <img alt='Steam' src='/api/steam?id=vczh'>
+              </div>
+            </div>
           </div>
         </div>
       </div>
